base/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leap25-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: leap25-frontend
  template:
    metadata:
      labels:
        app: leap25-frontend
    spec:
      containers:
        - name: leap25-frontend
          image: ghcr.io/dlsu-lscs/leap25-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
