base/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: leap25-frontend
spec:
  selector:
    app: leap25-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
