base/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leap25-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - dlsucso-leap.com
      secretName: leap25-frontend-tls
  rules:
    - host: dlsucso-leap.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leap25-frontend
                port:
                  number: 80
